style.css
@import url('https://fonts.googleapis.com/css?family=Crimson+Text');
@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
@import url(//fonts.googleapis.com/earlyaccess/notosanscoptic.css);

h1 {
  text-align: center;
  color:  grey;
  font-size: 50px;
}

body {
  text-align: center;
  font-family: 'Crimson Text', serif;
  font-size: 22px;
  background-color: white;
  color: black;
}

strong {
  font-weight: bold;
  color: grey;
  font-size: 25px;
}

em {
  color: grey;
}

.pic {
  border-bottom: 1px solid grey;
  width: 512px;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
}

.big_pic{
  border-bottom: 1px solid grey;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  width: 762.5px;
}

.coin {
  vertical-align: top;
  display: inline-block;
  text-align: center;
  width: 512px;
  background-color: #EAEAEA;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
  border: 1px solid grey !important;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  -webkit-transition: background-color 0.1s ease-out;
  -moz-transition: background-color 0.1s ease-out;
  -o-transition: background-color 0.1s ease-out;
  transition: background-color 0.1s ease-out;
}

.coin:hover {
  background-color: #DFDFDF;
  -webkit-transition: background-color 0.25s ease-out;
  -moz-transition: background-color 0.25s ease-out;
  -o-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
}

.coin_page {
  padding-bottom: 25px;
  vertical-align: top;
  display: inline-block;
  text-align: center;
  width: 762.5px;
  background-color: #EAEAEA;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
  border: 1px solid grey !important;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  margin-bottom: 25px
}

.images {
  padding-bottom: 25px;
  vertical-align: top;
  margin: auto;
  text-align: center;
  width: 762.5px;
  background-color: #EAEAEA;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  margin-bottom: 25px
}

.caption-title {
  display: block;
  color: grey;
  font-size: 25px;
}

.caption-subtitle {
  display: block;
  color: grey;
  font-style: italic;
  font-size: 22px;
  padding-bottom: 25px;
}

.caption-subtitle2 {
  display: block;
  color: grey;
  font-style: italic;
  font-size: 22px;
}

.coin-title {
  font-size: 30px;
  color: grey;
}

.coin-subtitle {
  font-size: 22px;
  font-style: italic;
  margin-top: -30px;
  color: grey;
}

.description {
  font-size: 20px;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #EAEAEA;
    text-align: center;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
}

li {
    display: inline;
}

li a {
    display: inline-block;
    color: grey;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

.inactive {
  -webkit-transition: background-color 0.1s ease-out;
  -moz-transition: background-color 0.1s ease-out;
  -o-transition: background-color 0.1s ease-out;
  transition: background-color 0.1s ease-out;
}

.inactive:hover {
  background-color: #DFDFDF;
  -webkit-transition: background-color 0.25s ease-out;
  -moz-transition: background-color 0.25s ease-out;
  -o-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
}

.active {
  background-color: #DFDFDF;
  pointer-events: none;
  cursor: default;
}

.inactive-null {
  pointer-events: none;
  cursor: default;
  color: white;
}

.cool-link {
  text-decoration: none;
  color: grey;
}

.cool-link:hover {
  color: black;
}

.cool-link2 {
  text-decoration: none;
  color: lightgrey;
}

.cool-link2:hover {
  color: grey;
}

.paragraph {
  padding-bottom: 25px;
  vertical-align: top;
  margin: auto;
  text-align: center;
  width: 762.5px;
  background-color: darkgrey;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  margin-bottom: 25px;
  padding-top: 25px;
}

.marginated {
  margin-left: 100px; 
  margin-right: 100px;
  color: grey;
}

/*Image Modal*/

#myImg {
  cursor: pointer; 
  transition: 0.25s;
}

#myImg:hover {opacity: 0.8;}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 260px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
    -webkit-animation-name: fadeIn;
    -webkit-animation-duration: 0.4s;
    animation-name: fadeIn;
    animation-duration: 0.4s;
}

/* Modal Content (image) */
.modal-content {
    margin: auto;
    display: block;
    max-width: 100%;
}

/* Caption of Modal Image */
#caption {
    margin: auto;
    display: block;
    max-width: 100%;
    text-align: center;
    color: #ccc;
    padding: 10px 0;
    height: 50px;
}

/* Add Animation */
.modal-content, #caption {    
    -webkit-animation-name: fadeIn;
    -webkit-animation-duration: 0.4s;
    animation-name: fadeIn;
    animation-duration: 0.4s;
}

@-webkit-keyframes fadeIn {
    from { opacity: 0;} 
    to { opacity: 1;}
}

@keyframes fadeIn {
    from { opacity: 0;} 
    to { opacity: 1;}
}

/* The Close Button */
.close {
    position: absolute;
    top: 15px;
    right: 35px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
}

.close:hover,
.close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}

/* 100% Image Width on Smaller Screens */
@media only screen and (max-width: 100%){
    .modal-content {
        width: 100%;
    }
}

@-webkit-keyframes fadeOut {
    from { opacity: 1;} 
    to { opacity: 0;}
}

@keyframes fadeOut {
    from { opacity: 1;} 
    to { opacity: 0;}
}

.button {
  background-color: #EAEAEA;
  border: 1px solid grey;
  color: grey;
  padding: 10px 32px; 
  margin-top: 30px;
  margin-right: 10px;
  margin-left: 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  -webkit-transition: background-color 0.1s ease-out;
  -moz-transition: background-color 0.1s ease-out;
  -o-transition: background-color 0.1s ease-out;
  transition: background-color 0.1s ease-out;
}

.button-null {
  background-color: #DFDFDF;
  border: 1px solid grey;
  color: grey;
  padding: 10px 32px; 
  margin-top: 30px;
  margin-right: 10px;
  margin-left: 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  pointer-events: none;
  cursor: default;
}

.button:hover {
  background-color: #DFDFDF;
  -webkit-transition: background-color 0.25s ease-out;
  -moz-transition: background-color 0.25s ease-out;
  -o-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
}

hr.style-one {
  padding: 0;
  border: none;
  border-top: 1px solid grey;
  color: grey;
  text-align: center;
  width: 750px;
  margin-top: 25px; 
  margin-bottom:-25px;
  font-family: 'Noto Sans Coptic', 'Crimson Text', serif;
}

hr.style-one:after {
  content: '\25CC';
  display: inline-block;
  position: relative;
  top: -0.7em;
  font-size: 1.5em;
  padding: 0 0.25em;
  background: white;
}

.aligned {
  text-align: justify; 
  margin-left: 50px;
  margin-right: 50px;
}

